# advent-of-code

./: .gitignore
2019/: Cargo.toml
2019/inputs/: day08secret.txt  day17instructions.txt  day20ex2.txt  day21_2.txt  intcode_loop.txt
2019/saves/: save_13.json  save_13_backup.json
2019/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  main.rs  parsers.rs
2020/: Makefile
2020/day_1/: day1a.jl  day1a.rkt  day1b.jl  day1b.rkt
2020/day_2/: day2a.jl  day2a.rkt  day2b.jl  day2b.rkt
2020/day_3/: day3a.jl  day3b.jl
