[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Andrew Pritchard <andrewjpritchard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.1"
bytecount = "0.6.0"
ncurses = "5.99.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
